# VIKAS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_SETUP.md  ISSUES_AND_FIXES.md  ProjectPlan.md  README.md  db_setup.md  package-lock.json  package.json  pyproject.toml  turbo.json  vikas-project-plan.md  vikas_schema_uml.html  vikas_sentiment_prompts.md
apps/api/: alembic.ini  main.py  pyproject.toml
apps/api/agents/competitor/: competitor_discovery.py  competitor_monitor.py  content_extractor.py  keyword_overlap_analyzer.py  threat_assessor.py
apps/api/agents/content/: article_planner.py  article_writer.py  content_director.py  image_creator_agent.py  lead_magnet_agent.py  linkedin_agent.py  newsletter_agent.py  twitter_agent.py  video_script_agent.py  video_scriptwriter.py
apps/api/agents/knowledge/: ai_assistant.py  brand_voice_keeper.py  document_ingester.py  internal_link_finder.py  rag_searcher.py  wordpress_publisher.py
apps/api/agents/ops/: preference_learner.py
apps/api/agents/orchestration/: auto_mode_engine.py  pipeline_orchestrator.py  strategy_synthesizer.py
apps/api/agents/sentiment/: _db.py  aggregator.py  entity_extractor.py  google_news_collector.py  newsapi_collector.py  polarity_classifier.py  sentiment_filter.py  sentiment_orchestrator.py  source_credibility_scorer.py  spike_detector.py  telegram_collector.py  theme_tagger.py  youtube_collector.py
apps/api/agents/seo/: aeo_scanner.py  gap_analyzer.py  keyword_research.py  keyword_validator.py  opportunity_scorer.py  rank_tracker.py  site_auditor.py  topic_discovery.py  trend_collector.py
apps/api/agents/video/: broll_selector.py  video_handoff.py
apps/api/api/: deps.py
apps/api/api/v1/: agents.py  chat.py  dashboard.py  keywords.py  orgs.py  router.py  video_jobs.py  video_upload.py
apps/api/config/: model_tiers.yaml  settings.py
apps/api/core/: __init__.py  agent_base.py  agent_registry.py  contracts.py  cost_tracker.py  llm_router.py  preference_loader.py  prompt_registry.py  task_queue.py
apps/api/db/: session.py
apps/api/db/migrations/: env.py  rls_policies.sql
apps/api/db/models/: __init__.py  aeo_results.py  agent_runs.py  analyzed_mentions.py  brand_voice.py  competitor_content.py  competitors.py  content_feedback.py  content_items.py  content_reviews.py  district_patterns.py  eval_log.py  keyword_clusters.py  keywords.py  knowledge_chunks.py  opportunities.py  organizations.py  pipeline_runs.py  preference_summaries.py  preferences.py  (+10 more)
apps/api/integrations/: anchor_scale_estimator.py  base.py  content_fetch.py  dataforseo.py  email.py  google_news_rss.py  google_search.py  google_search_console.py  newsapi.py  pexels.py  reddit_trends.py  serp_scraper.py  sitemap.py  slack_webhook.py  telegram_channel.py  wikipedia_trends.py  wordpress.py  youtube_data.py
apps/api/knowledge/: agent_capabilities.md  faq.md  how_it_works.md
apps/api/rag/: brand_voice.py  chunker.py  embeddings.py  retriever.py
apps/api/routers/: video_jobs.py  video_upload.py
apps/api/workers/: celery_app.py
(+224 files in other folders)
