[project]
name = "vikas-api"
version = "0.1.0"
description = "Vikas FastAPI backend — agent orchestration and API layer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pgvector>=0.2.5",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "tiktoken>=0.7.0",
    "cryptography>=42.0.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.130.0",
    "pytrends>=4.9.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "anyio>=4.4.0",
    "python-multipart>=0.0.9",
    "langdetect>=1.0.9",
    "vaderSentiment>=3.3.2",
    "datasketch>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests"]

[dependency-groups]
dev = [
    "respx>=0.23.1",
]
